tests/neg-custom-args/captures/i21442.check
-- Error: tests/neg-custom-args/captures/i21442.scala:10:13 ------------------------------------------------------------
10 |  val io = x.unbox // error: local reach capability {x*} leaks
   |           ^^^^^^^
   |           Local reach capability x.unbox* leaks into capture scope of method foo.
   |           You could try to abstract the capabilities referred to by x.unbox* in a capset variable.
-- Error: tests/neg-custom-args/captures/i21442.scala:18:14 ------------------------------------------------------------
18 |  val io = x1.unbox // error
   |           ^^^^^^^^
   |           Local reach capability x* leaks into capture scope of method bar.
   |           You could try to abstract the capabilities referred to by x* in a capset variable.
-- Error: tests/neg-custom-args/captures/i21442.scala:17:10 ------------------------------------------------------------
17 |  val x1: Boxed[IO^] = x // error
   |          ^^^^^^^^^^
   |          Separation failure: value x1's type Boxed[IO^] hides parameter x.
   |          The parameter needs to be annotated with consume to allow this.
